omni/tests/goldens/types/undefined_ident_04.err
tests/goldens/types/undefined_ident_04.omni:1:19: error: undefined identifier "missing4"
  let result4:int = missing4
                    ^~~ hint: declare the name before using it
